--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,26 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: #000000;
+    border-radius: 50%;
+}
+
+a:active {
+    background-color: rgb(245, 154, 189);
+    border-radius: 50%;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
