--- a/styles/Art.module.css
+++ b/styles/Art.module.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+
 .heading {
     color: #ffffff;
     display: flex;
     justify-content: center;
+    font-family: "Roboto", sans-serif;
 }
 
 .containerItem {
