--- a/styles/Art.module.css
+++ b/styles/Art.module.css
@@ -2,9 +2,9 @@
 
 .heading {
     color: #ffffff;
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-family: "Roboto", sans-serif;
+    text-shadow: 5px 5px #4e4d5c;
 }
 
 .containerItem {
@@ -32,16 +32,16 @@
 
 .cardHeader {
     border-radius: 10px 10px 0 0;
-    color: #f1e4e8;
+    color: #2d2d34;
     height: 10vh;
-    background-color: #4e4d5c;
+    background-color: #ebdfe5;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .cardContainer {
-    box-shadow: 10px 10px 0 #2d2d34;
+    box-shadow: 10px 10px 0 0 #2d2d34;
     border-radius: 10px;
     background-color: #4e4d5c;
     margin-bottom: 5vh;
