--- a/styles/Art.module.css
+++ b/styles/Art.module.css
@@ -62,7 +62,7 @@
 
 .cardContainer {
     border-radius: 10px;
-    background-color: #4e4d5c;
+    background-color: #ceb1be;
     margin-bottom: 5vh;
     box-shadow: 12px 12px 0 0 #2d2d34;
     max-width: 250px;
