--- a/styles/NavButton.module.css
+++ b/styles/NavButton.module.css
@@ -2,18 +2,13 @@
 .button {
     border-color: #fff;
     border-style: solid;
-    height: 5vh;
-    width: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: #fff;
     font-family: "Roboto", sans-serif;
-    font-size: 5vh;
-    padding: 3vh;
+    font-size: 3.5vh;
     box-shadow: 5px 5px 0 #2d2d34;
-    margin: 1vh;
     cursor: pointer;
+    margin-left: 1vh;
+    padding: 1vh;
 }
 
 .button:hover {
