--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
 
+:root {
+    --dark-pink: #b97375;
+    --dark-grey: #2d2d34;
+    --pink: #ceb1be;
+    --light-pink: #f1e4e8;
+    --light-grey: #4e4d5c;
+}
+
 html,
 body {
     padding: 0;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-color: #b97375;
+    background-color: var(--dark-pink);
 }
 
 * {
