--- a/styles/NavMenu.module.css
+++ b/styles/NavMenu.module.css
@@ -4,7 +4,7 @@
     border-style: solid;
     color: white;
     font-family: "Roboto", sans-serif;
-    font-size: 3.5vh;
+    font-size: 16px;
     box-shadow: 5px 5px 0 var(--dark-grey);
     cursor: pointer;
     margin-left: 1vh;
@@ -23,5 +23,11 @@
 .container {
     display: flex;
     justify-content: flex-end;
-    margin: 2vh;
+    margin: 1vh;
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        justify-content: center;
+    }
 }
