--- a/styles/NavMenu.module.css
+++ b/styles/NavMenu.module.css
@@ -10,6 +10,7 @@
     margin-left: 1vh;
     padding: 1vh;
     background-color: var(--dark-pink);
+    transition: background-color 0.5s ease;
 }
 
 .button:hover {
