--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,3 +38,17 @@ body {
         margin-right: 100px;
     }
 }
+
+a {
+    color: var(--dark-grey);
+    font-weight: bold;
+    text-decoration: underline;
+    cursor: pointer;
+    transition: color 0.5s ease;
+}
+a:hover {
+    color: var(--light-pink);
+}
+a:active {
+    color: var(--pink);
+}
