--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,7 @@ body {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    gap: 12px;
 }
 
 @media only screen and (min-width: 768px) {
