--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,10 @@
     --pink: #ceb1be;
     --light-pink: #f1e4e8;
     --light-grey: #4e4d5c;
+    --off-white: #f4f4f9;
+    --charcoal: #2f4550;
+    --electric-blue: #586f7c;
+    --powder-blue: #b8dbd9;
 }
 
 html,
@@ -14,7 +18,7 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-color: var(--dark-pink);
+    background-color: var(--off-white);
 }
 
 * {
@@ -41,17 +45,17 @@ body {
 }
 
 a {
-    color: var(--dark-grey);
+    color: var(--charcoal);
     font-weight: bold;
     text-decoration: underline;
     cursor: pointer;
     transition: color 0.5s ease;
 }
 a:hover {
-    color: var(--light-pink);
+    color: var(--powder-blue);
 }
 a:active {
-    color: var(--pink);
+    color: var(--electric-blue);
 }
 
 .page-container {
