--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,8 @@ body {
 }
 
 @media only screen and (min-width: 768px) {
-    .container {
+    .container,
+    .general-container {
         margin-left: 100px;
         margin-right: 100px;
     }
