--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,8 @@
     --charcoal: #2f4550;
     --electric-blue: #586f7c;
     --powder-blue: #b8dbd9;
-    --small-media-space: 15px;
+    --small-media-padding: 15px;
+    --large-media-padding: 120px;
 }
 
 html,
